--- a/lib/style.css
+++ b/lib/style.css
@@ -129,5 +129,6 @@
         height: 100%;
         max-height: 760px;
         vertical-align: middle;
+        background-color: transparent;
     }
 }
