--- a/lib/style.css
+++ b/lib/style.css
@@ -42,7 +42,7 @@
 }
 
 .bootpay-window .progress-message-window {
-    display: none;
+    display: block;
     position: absolute;
     left: 0;
     right: 0;
