--- a/lib/style.css
+++ b/lib/style.css
@@ -42,7 +42,7 @@
 }
 
 .bootpay-window .progress-message-window {
-    display: block;
+    display: none;
     position: absolute;
     left: 0;
     right: 0;
@@ -52,6 +52,10 @@
     text-align: center;
     white-space: nowrap;
     padding: 1em;
+}
+
+.bootpay-window .progress-message-window.over {
+    z-index: 30001;
 }
 
 .bootpay-window .progress-message-window .progress-message {
@@ -65,7 +69,7 @@
 }
 
 .bootpay-window .progress-message-window .close-message-box {
-    display: none;
+    display: inline-block;
     text-align: center;
     max-width: 600px;
     border-radius: 3px;
