ios 인앱 iFrame으로 결제창을 띄울 경우 탭 위치 버그 수정

--- a/test/stylesheet/style.css
+++ b/test/stylesheet/style.css
@@ -42,15 +42,14 @@ select.bootpay-select:disabled {
 
 .pg-select-container {
     max-width: 800px;
-    width: 100%;
     margin: 0 auto;
+    padding: 0.5rem;
 }
 
 .pg-select-box {
     margin-top: 30px;
-    width: 100%;
     border: 1px solid #e2e2e2;
-    padding: 14px;
+    padding: 1rem;
 }
 
 .group {
